force-app/main/default/objects/Incident_Report__c/Incident_Report__c.object-meta.xml
<CustomObject>
    <label>Incident Report</label>
    <nameField>
        <label>Incident Report</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>