force-app/main/default/objects/Incident_Report__c/fields/Description_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Incident__c</fullName>
    <label>Description of Incident</label>
    <length>255</length>
    <type>Text</type>
</CustomField>