force-app/main/default/objects/Incident_Report__c/fields/Type_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Incident__c</fullName>
    <label>Type of Incident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abuse (Physical, Emotional, Sexual)</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Medical Emergency</fullName>
            </value>
            <value>
                <fullName>Behavioral Issues</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Runaway/Missing Child</fullName>
            </value>
            <value>
                <fullName>Safety Concerns</fullName>
            </value>
            <value>
                <fullName>Parental Incarceration</fullName>
            </value>
            <value>
                <fullName>Child Labor</fullName>
            </value>
            <value>
                <fullName>Exploitation</fullName>
            </value>
            <value>
                <fullName>Child Marriage</fullName>
            </value>
            <value>
                <fullName>Educational Neglect</fullName>
            </value>
            <value>
                <fullName>Abandonment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>