force-app/main/default/objects/Incident_Report__c/fields/Witness_Info__c.field-meta.xml
<CustomField>
    <fullName>Witness_Info__c</fullName>
    <label>Witness Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>