force-app/main/default/objects/Incident_Report__c/recordTypes/Abuse_Incident.recordType-meta.xml
<RecordType>
    <fullName>Abuse_Incident</fullName>
    <active>true</active>
    <label>Abuse Incident</label>
</RecordType>