force-app/main/default/objects/Incident_Report__c/recordTypes/General_Incident.recordType-meta.xml
<RecordType>
    <fullName>General_Incident</fullName>
    <active>true</active>
    <label>General Incident</label>
</RecordType>