force-app/main/default/objects/Incident_Report__c/recordTypes/Safety_Concern.recordType-meta.xml
<RecordType>
    <fullName>Safety_Concern</fullName>
    <active>true</active>
    <label>Safety Concern</label>
</RecordType>