force-app/main/default/objects/Incident_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident_Date__c</columns>
    <columns>Description_of_Incident__c</columns>
    <columns>Type_of_Incident__c</columns>
    <columns>Action_Taken__c</columns>
    <columns>Status__c</columns>
    <columns>Location_of_Incident__c</columns>
    <columns>Severity_Level__c</columns>
    <columns>Witness_Info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>